--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -1,13 +1,13 @@
 <main>
   <div class="row">
     <div class="row description">
-      <div class="col-sm-2">
+      <div class="albumart col-sm-2">
         <img src="assets/opacity-zero.jpg" alt="product image" />
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-8">
         <p class="album-name">Opacity Zero</p>
         <p class="band-name">The Prependers</p>
-        <p class="album-release-date">September 25, 2014</p>
+        <p class="album-release-date">Released: <span class="album-release-date date">September 25, 2014</span></p>
       </div>
     </div>
   </div>
@@ -22,6 +22,26 @@
             </div>
             <div class="col-sm-3 text-right">
               <span class="track-time">4:48</span>
+              <span class="price-and-buy"><button>$0.99</button></span>
+            </div>
+          </li>
+          <li>
+            <div class="col-sm-5">
+              <span class="track-number">2</span>
+              <span class="track-name">The Second</span>
+            </div>
+            <div class="col-sm-3 text-right">
+              <span class="track-time">4:38</span>
+              <span class="price-and-buy"><button>$0.99</button></span>
+            </div>
+          </li>
+          <li>
+            <div class="col-sm-5">
+              <span class="track-number">3</span>
+              <span class="track-name">The LastLast</span>
+            </div>
+            <div class="col-sm-3 text-right">
+              <span class="track-time">5:08</span>
               <span class="price-and-buy"><button>$0.99</button></span>
             </div>
           </li>
