--- a/src/app/product-description/product-description.component.html
+++ b/src/app/product-description/product-description.component.html
@@ -1,3 +1,10 @@
-<p>
-  product-description works!
-</p>
+<div class="row description">
+  <div class="albumart col-sm-2">
+    <img src="assets/opacity-zero.jpg" alt="product image" />
+  </div>
+  <div class="col-sm-8">
+    <p class="album-name">Opacity Zero</p>
+    <p class="band-name">The Prependers</p>
+    <p class="album-release-date">Released: <span class="album-release-date date">September 25, 2014</span></p>
+  </div>
+</div>
